2016-01-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/utils.c (get_homedir): Don't use $HOME when we're root, because
	some sudos don't filter it out of the environment (which can lead to
	a root-owned .nano/ directory in the invoking user's home directory).
	It fixes https://bugs.launchpad.net/ubuntu/+source/nano/+bug/1471459.

2016-01-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/prompt.c (get_prompt_string): Preserve the cursor position on
	the statusbar when just toggling a setting or making an excursion to
	the file browser.  This fixes Savannah bug #46945.
	* src/prompt.c (do_prompt_abort): Remove this unneeded function, as
	nothing can break out of do_prompt(), not a SIGWINCH either.
	* src/prompt.c (get_prompt_string): Delete code that is dead now.
	* src/prompt.c (get_prompt_string): Elide an unneeded variable.
	* src/browser.c (do_browser): Delete unneeded blanking of a variable.

2016-01-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (open_buffer): Readjust the indentation and a comment.
	* src/files.c (has_valid_path): Get rid of a global variable.

2016-01-20  Rishabh Dave  <rishabhddave@gmail.com>
	* src/files.c (verify_path, open_buffer): When opening a new buffer,
	verify that the containing directory of the given filename exists.
	This fixes Savannah bug #44950.
	* src/files.c (do_lockfile): Remove the existence check on the
	directory, as this is now covered by verify_path().

2016-01-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c: Fix typo in #ifndef symbol.  Reported by Frank.
	* doc/syntax/nanorc.nanorc: Remove '+' as only one menu is allowed.
	* src/files.c (load_poshistory): Limit the number of loaded items.

2016-01-17  Mike Frysinger  <vapier@gentoo.org>
	* doc/syntax/nanorc.nanorc: Allow inline comments with key bindings.

2016-01-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (set_modified): Plug another memory leak.